# ps

./: .gitignore  README.md  clean.sh  venv.sh
boj/: 12865.cpp  1753.cpp  1987.cpp
boj_tool/: CMakeLists.txt  main.cpp  str.cpp  str.h  web.cpp  web.h
codeforces/contest/1926/a/: a.cpp
codeforces/contest/1926/b/: b.cpp
codeforces/contest/1932/a/: a.cpp
codeforces/contest/1932/b/: b.cpp
codeforces/contest/1932/c/: c.cpp
codeforces/contest/1932/d/: d.cpp
codeforces/contest/1932/f/: f.cpp
codeforces/contest/1933/a/: a.cpp
codeforces/contest/1933/b/: b.cpp
codeforces/contest/1933/c/: c.cpp
codeforces/contest/1933/d/: d.cpp
codeforces/contest/1933/e/: e.cpp
codeforces/contest/1933/f/: f.cpp
codeforces/contest/1933/g/: g.cpp
codeforces/contest/1934/a/: a.cpp
codeforces/contest/1934/b/: b.cpp
codeforces/contest/1934/c/: c.cpp
codeforces/contest/1934/e/: e.cpp
codeforces/contest/1935/a/: a.cpp
codeforces/contest/1935/b/: b.cpp
codeforces/contest/1935/c/: c.cpp
codeforces/contest/1935/d/: d.cpp
codeforces/contest/1935/f/: f.cpp
codeforces/contest/1937/a/: a.cpp
codeforces/contest/1937/b/: b.cpp
codeforces/contest/1937/c/: c  c.cpp
codeforces/contest/1937/d/: d.cpp
codeforces/contest/1937/f/: f.cpp
codeforces/contest/1942/a/: a.cpp
codeforces/contest/1942/b/: b.cpp
codeforces/contest/1942/c1/: c1.cpp
codeforces/contest/1942/c2/: c2.cpp
codeforces/contest/1942/d/: d.cpp
codeforces/contest/1942/f/: f.cpp
codeforces/contest/1944/a/: a.cpp
codeforces/contest/1944/b/: b.cpp
resources/: config  template.cpp
(+20 files in other folders)
